welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:6: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Byte)Int
match expected type ?
  if ( y % 2 = 0 && x !=6)
         ^ZigZag:6: error: value && is not a member of Int
  if ( y % 2 = 0 && x !=6)
                 ^ZigZag:10: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Byte)Int
match expected type ?
  		if (y % 2 = 1 && x != 0 )
                      ^ZigZag:10: error: value && is not a member of Int
  		if (y % 2 = 1 && x != 0 )
                              ^ZigZag:14: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Byte)Int
match expected type ?
  		if (y % 2 = 0 && x =6)
                      ^ZigZag:14: error: value && is not a member of Int
  		if (y % 2 = 0 && x =6)
                              ^ZigZag:18: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Byte)Int
match expected type ?
  	if (y % 2 = 1 && x = 0 )
              ^ZigZag:18: error: value && is not a member of Int
  	if (y % 2 = 1 && x = 0 )
                      ^